Fixed some silly spacing on chrome

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -25,7 +25,7 @@
 }
 
 .project-header {
-    margin: -5px 0 10px 20px;
+    margin: 0 0 7px 20px;
     text-align: left;
     font-size: 20px;
     color: var(--header-color);
