--- a/static/css/main.css
+++ b/static/css/main.css
@@ -49,7 +49,7 @@ summary:hover {
 .hr {
     height: 1px;
     background-color: #373737;
-    margin: 15px 10px;
+    margin: 10px 10px;
 }
 
 .box {
